fix(Button): fix vertical-align of text with link button

--- a/src/components/Button/style.css
+++ b/src/components/Button/style.css
@@ -10,6 +10,8 @@
 }
 
 a.e-button {
+  align-items: center;
+  display: inline-flex;
   text-decoration: none !important;
 }
 
